# app/Presentation/Http/Controllers/User/CreateUserController.php
@@ -15,6 +15,30 @@ final readonly class CreateUserController
         private CommandBus $commandBus
     ) { }
 
+    /**
+     * @OA\Post(
+     *      path="/api/user/create",
+     *      operationId="createUser",
+     *      tags={"User"},
+     *      summary="Create a new user",
+     *      requestBody={"$ref": "#/components/requestBodies/CreateUserRequest"},
+     *
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\JsonContent(ref="#/components/schemas/CreateUserSuccessResource")
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=422,
+     *          description="Validation Error",
+     *          @OA\JsonContent(ref="#/components/schemas/ApiErrorResource")
+     *      ),
+     * )
+     *
+     * @param CreateUserRequest $request
+     * @return CreateUserSuccessResource
+     */
     public function __invoke(CreateUserRequest $request): CreateUserSuccessResource
     {
         return new CreateUserSuccessResource(
