# app/Presentation/Http/Resources/User/CreateUserSuccessResource.php
@@ -5,6 +5,20 @@ namespace App\Presentation\Http\Resources\User;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
+/**
+ * @OA\Schema(
+ *      schema="CreateUserSuccessResource",
+ *      type="object",
+ *      @OA\Property(
+ *          type="object",
+ *          property="data",
+ *          @OA\Property(
+ *              type="string",
+ *              property="username",
+ *          )
+ *      )
+ * )
+ */
 class CreateUserSuccessResource extends JsonResource
 {
     /**
